加入购物车功能基本实现

--- a/src/pages/menu/menu/children/menuRightList/menuRight.scss
+++ b/src/pages/menu/menu/children/menuRightList/menuRight.scss
@@ -38,10 +38,10 @@
                         >div:last-child{
                             text-align: right;
                             padding-right: .1rem;
-                            span{
-                                display: inline-block;
+                            button{
                                 color:#f40;
                                 border: 1px solid #f40;
+                                background: #fff;
                                 padding:0 .05rem;
                                 border-radius: .03rem;
                             }
