--- a/src/pages/takeTea/takeTea/takTea.scss
+++ b/src/pages/takeTea/takeTea/takTea.scss
@@ -15,11 +15,18 @@
         >div{
             width: 100%;
             height: .5rem;
-            background: blue;
             line-height: .5rem;
             text-align: center;
-            i{
+            img{
+                width: .25rem;
                 vertical-align: middle;
+                &.active{
+                    transition: .5s linear;
+                    transform: rotateZ(180deg);
+                }
+            }
+            span{
+                margin-left: .1rem;
             }
         }
         li{
